HTML rough finish, header fixed, no squish
Fixed header gap, set flex to none, completed the basic HTML, small tweaks

--- a/styles/headandfoot.css
+++ b/styles/headandfoot.css
@@ -1,22 +1,31 @@
 .header {
     color: #F9FAF8;
     display: flex;
-    justify-content: space-between;
-    padding-inline: 235px; 
+    justify-content: center;
+    flex: shrink 0;
+    gap: 159px;
 }
 
 ul {
     display: flex;
     list-style: none;
     gap: 20px;
-    margin: 20px;
+    margin-block: 20px;
     color: #E5E7EB;
-    align-items: center;
+    align-content: center;  
+    justify-content: flex-end; 
+    width: 450px;
+    padding-right: 0px;
 }
 
 .Logo {
-    margin: 20px;
     font-size: 24px; 
     font-weight: bold;
-    justify-content: center;
+    align-content:  center;
+    height: 62px;
+    width: 490px;
+}
+
+.footer {
+    height: 62px;
 }
